# UzLemma

./: README.md  setup.cfg  setup.py
src/: UzLemma.py
