[metadata]
name = UzLemma
version = 1.0
author = Ulugbek Salaev
author_email = ulugbek0302@gmail.com
description = Uzbek Lemmatizer for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UlugbekSalaev/UzLemma
project_urls =
    Bug Tracker = https://github.com/UlugbekSalaev/UzLemma/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src